api done (2 new routes)
